phase IV code/public_html/Scripts/nohup.out
/home/students/jl_boyd/public_html/public_html/Scripts/node_modules/mongodb/lib/bson.js:10
catch { } // eslint-disable-line
      ^

SyntaxError: Unexpected token {
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/students/jl_boyd/public_html/public_html/Scripts/node_modules/mongodb/lib/utils.js:11:16)
/home/students/jl_boyd/public_html/public_html/Scripts/node_modules/mongodb/lib/bson.js:10
catch { } // eslint-disable-line
      ^

SyntaxError: Unexpected token {
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/students/jl_boyd/public_html/public_html/Scripts/node_modules/mongodb/lib/utils.js:11:16)
Example app listening on port 3707
Example app listening on port 3707
